fix uneven height of gallery center div : specify height of each div

--- a/Week-3/task-3/style.css
+++ b/Week-3/task-3/style.css
@@ -167,6 +167,7 @@ body {
         width: calc(calc(90% - 80px) / 4);
         margin: 10px;
         background-color: lightblue;
+        height: 260px;
     }
 
     .center-img-div {
